--- a/connexion/se_connecter.html
+++ b/connexion/se_connecter.html
@@ -10,8 +10,9 @@
       <div class="form">
             <form action="">
                   <h2>Connectez-vous !</h2>
-                  <input type="mail" name="mail" placeholder="exemple@gmail.com" required>
+                  <input type="mail" name="mail" placeholder="exemple@gmail.com" required> 
                   <input type="password" name="mail" placeholder="votre mot de pass" required>
+                  <input type="submit" value="Connexion">
             </form>
       </div>
 </body>
