--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
       <meta charset="UTF-8">
@@ -15,14 +15,14 @@
                         <div class="barre">
                               <ul>
                                     <li><a href="">accueil</a></li>
-                                    <li><a href="sous_pages/nouveau.html">nouveaux</a></li>
+                                    <li><a href="">nouveau</a></li>
                                     <li><a href="">a propos</a></li>
                                     <li><a href="">contact</a></li>
-                                    <li><a href="">Panier</a></li>
+                                    <li><a href="">panier</a></li>
                               </ul>
                         </div>
                         <div class="connexion">
-                              <a class="login" href="">Se connecter</a>
+                              <a class="login" href="connexion/se_connecter.html">Se connecter</a>
                               <a class="sign_up" href="">S'inscrire</a>
                         </div>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="nouveau" id="nouveau">
                   <img class="image"  src="image.png" alt="">
-                  <img src="illustration/montre.png" alt="">
+                  <img src="illustration/basket.png" alt="">
             </div>
             <div class="produit">
                   <img src="illustration/macbook.png" alt="">
