--- a/sous_pages/nouveau.html
+++ b/sous_pages/nouveau.html
@@ -15,7 +15,7 @@
                         <div class="barre">
                               <ul>
                                     <li><a href="">accueil</a></li>
-                                    <li><a href="sous_pages/nouveau.html">nouveaux</a></li>
+                                    <li><a href="">nouveaux</a></li>
                                     <li><a href="">a propos</a></li>
                                     <li><a href="">contact</a></li>
                                     <li><a href="">Panier</a></li>
